--- a/cms-web/src/app/components/app/app.component.html
+++ b/cms-web/src/app/components/app/app.component.html
@@ -6,10 +6,11 @@
         <div class="navbar-nav">
           <a [routerLink]="'/login'" class="nav-link active" aria-current="page">Login</a>
           <a [routerLink]="'/users'" class="nav-link active" aria-current="page">Users</a>
+          <a [routerLink]="'/new-user'" class="nav-link active" aria-current="page">New User</a>
         </div>
-        <div class="d-flex">
+        <!-- <div class="d-flex">
           <span>{{ getToken() }}</span>
-        </div>
+        </div> -->
       </div>
     </div>
   </nav>
