--- a/cms-web/src/app/components/app/app.component.html
+++ b/cms-web/src/app/components/app/app.component.html
@@ -7,6 +7,9 @@
           <a [routerLink]="'/login'" class="nav-link active" aria-current="page">Login</a>
           <a [routerLink]="'/users'" class="nav-link active" aria-current="page">Users</a>
           <a [routerLink]="'/new-user'" class="nav-link active" aria-current="page">New User</a>
+          <a [routerLink]="'/machines'" class="nav-link active" aria-current="page">Machines</a>
+          <a [routerLink]="'/new-machine'" class="nav-link active" aria-current="page">New Machine</a>
+          <a [routerLink]="'/operation-errors'" class="nav-link active" aria-current="page">Operation Errors</a>
         </div>
         <!-- <div class="d-flex">
           <span>{{ getToken() }}</span>
