Implemented guards. Edit user permissions. Automatic routing

--- a/cms-web/src/app/components/edit-user/edit-user.component.html
+++ b/cms-web/src/app/components/edit-user/edit-user.component.html
@@ -80,6 +80,77 @@
         />
         <label class="form-check-label" for="deletePermission"> Delete permission </label>
       </div>
+      <div class="form-check">
+        <input
+          [(ngModel)]="searchMachines"
+          name="searchMachines"
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="searchMachines"
+        />
+        <label class="form-check-label" for="searchMachines"> Search machines permission </label>
+      </div>
+
+      <div class="form-check">
+        <input
+          [(ngModel)]="startMachines"
+          name="startMachines"
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="startMachines"
+        />
+        <label class="form-check-label" for="startMachines"> Start machines permission </label>
+      </div>
+
+      <div class="form-check">
+        <input
+          [(ngModel)]="stopMachines"
+          name="stopMachines"
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="stopMachines"
+        />
+        <label class="form-check-label" for="stopMachines"> Stop machines permission </label>
+      </div>
+
+      <div class="form-check">
+        <input
+          [(ngModel)]="restartMachines"
+          name="restartMachines"
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="restartMachines"
+        />
+        <label class="form-check-label" for="restartMachines"> Restart machines permission </label>
+      </div>
+      
+      <div class="form-check">
+        <input
+          [(ngModel)]="createMachines"
+          name="createMachines"
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="createMachines"
+        />
+        <label class="form-check-label" for="createMachines"> Create machines permission </label>
+      </div>
+
+      <div class="form-check">
+        <input
+          [(ngModel)]="destroyMachines"
+          name="destroyMachines"
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="destroyMachines"
+        />
+        <label class="form-check-label" for="destroyMachines"> Destroy machines permission </label>
+      </div>
 
     <br />
     <button type="submit" class="btn btn-primary">Submit</button>
